--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 					<li class="sidebar-item active">
 						<a class="sidebar-link" href="index.html">
-              <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboardss</span>
+              <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Home</span>
             </a>
 					</li>
 
